--- a/ClientApp/tsconfig.json
+++ b/ClientApp/tsconfig.json
@@ -2,6 +2,9 @@
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "./",
+    "paths": {
+      "@app/*": ["src/app/*"]
+    },
     "module": "esnext",
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
