Migrated to SQLServer Docker container

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "CrudChatDB": "Server=localhost,1433; Database=crud_chat; User=sa; Password=4Dm2AWb#t174;"
   }
 }
