Added JWT authentication and basic authorization

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,6 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "AppSettings": {
+    "Secret": "pP4jdLKDTRdqdyvEN!BGj136WpapnHCnlEFhDW9SiRjV&XrhPk41CIhm873^%!if#H8%iVw$hPGW2Zbyq7@Jm0YIb5jv0zXG5jX"
+  },
   "ConnectionStrings": {
     "CrudChatDB": "Server=localhost,1433; Database=crud_chat; User=sa; Password=4Dm2AWb#t174;"
   }
